# FAEST-CUDA-Sign-Acceleration

./: .gitignore  README.md
.github/workflows/: build.yaml  nist.yaml
cuda/: leaf_hash_cuda.cu  test_bavc_commit_128.cu  test_bavc_commit_192.cu  test_bavc_commit_256.cu  test_bf384_mul_128.cu  test_bf576_mul_192.cu  test_bf768_mul_256.cu  test_leaf_hash_128.cu
faest-cuda/: .gitignore  bavc.c  bavc.h  meson.build  meson_options.txt
faest-cuda/cuda/: Makefile  cpu_ref_bf384.c  cpu_ref_bf384.h  fields_cuda.cuh  leaf_hash_cuda.cuh  test_leaf_hash_192.cu  test_leaf_hash_256.cu
faest-cuda/tests/: meson.build
results/: rtx3060_performance.csv
